# Modelling-of-instabilities-in-magneto-elastic-membranes

./: README.md
Documentation/1st task documentation/: Task_1.aux  Task_1.bbl  Task_1.bcf  Task_1.blg  Task_1.run.xml  Task_1.tex  references.bib
Documentation/Task_2.1_documentation/: Task_2_1.aux  Task_2_1.bbl  Task_2_1.bcf  Task_2_1.blg  Task_2_1.run.xml  Task_2_1.tex  references.bib  task2_ref.bib  task2_ref.bib.bak
Documentation/Task_2_2/: Task_2_2.tex  task2_ref.bib
Documentation/Thesis_ppt/: Presentation.tex  references.bib
Documentation/Thesis_report/: Acknowledgments.tex  Conclusion.tex  Introduction.tex  Makefile  Task_1.tex  Task_2_1.tex  Task_2_2.tex  Thesis_report.tex  abstract.tex  appendix1.tex  chapter1.tex  complete.tex  ifdraft.sty  task.tex  task_1_ref.bib  task_2_2_ref.bib
Documentation/coupled_relations/: coupled_deriv.tex  task2_ref.bib
MSP_toroidal_membrane/: CMakeLists.txt  MSP_toroidal_membrane.cc  parameters.prm
MSP_toroidal_membrane/include/: MSP_toroidal_membrane.h
MSP_toroidal_membrane/mesh/: 2d_inc_major_radius_040319.cub  2d_inc_major_radius_221118.cub  2d_mesh_08082018.cub  2d_toroidal_membrane.inp  crisfield_beam.cub  crisfield_beam.inp  crisfield_beam_2.cub  crisfield_beam_2.inp  new_2d_inc_major_radius_040319.inp  new_2d_inc_major_radius_221118.inp  new_2d_inc_radius.inp  new_crisfield_beam_2.cub  new_crisfield_beam_2.inp  new_crisfield_beam_3.cub  new_crisfield_beam_3.inp  new_hooped_beam_13022019.cub  new_hooped_beam_mesh.inp  (+4 more)
MSP_toroidal_membrane/src/: CMakeLists.txt  MSP_toroidal_membrane.cc  main.cc
(+30 files in other folders)
